using Dancer dzil plugin bundle

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,3 @@
-
 name    = Dancer
 author  = Dancer Core Developers
 license = Perl_5
@@ -7,43 +6,20 @@ copyright_year   = 2012
 main_module = lib/Dancer.pm
 version = 2.0
 
+[@Dancer]
+test_compile_skip = ^Dancer::(?:Serializer|Session)::YAML$
+autoprereqs_skip = ^t::lib::
+
 ; -- static meta-information
 [MetaResources]
 repository = https://github.com/PerlDancer/Dancer2
 bugtracker = https://github.com/PerlDancer/Dancer2/issues
 homepage   = http://perldancer.org/
 
-; -- fetch & generate files
-[GatherDir]
 
-; -- tests
-[Test::Compile]
-; Skip modules that depend on optional dependencies (YAML::Any)
-skip = ^Dancer::(?:Serializer|Session)::YAML$
-
-[MetaTests]
 ;[PodCoverageTests]
-[NoTabsTests]
-[PodSyntaxTests]
 ;[Test::EOL]
 
-; We should use "dzil xtest" instead
-; but keep it for now -- dolmen
-[ExtraTests]
-
-; -- use POD extensions
-[PodWeaver]
-
-; -- remove files
-[PruneCruft]
-[ManifestSkip]
-
-; -- add bin
-[ExecDir]
-
-; -- requirements
-[AutoPrereqs]
-skip = ^t::lib::
 
 [Prereqs]
 Moo = 0.009014
@@ -105,16 +81,3 @@ HTTP::Body = 0
 ; multidimensional = 0
 ; B::Hooks::OP::Check: = 0
 
-; -- auto version added
-[PkgVersion]
-
-; -- dynamic meta information
-[MetaProvides::Package]
-
-; -- generate meta/build files
-[License]
-[MakeMaker]
-[ModuleBuild]
-[MetaYAML]
-[MetaJSON]
-[Manifest] ; should come last
